<?xml version="1.0"?>
<package format="2">
  <name>ublox</name>
  <version>1.0.0</version>
  <description>UBLOX read node</description>

  <maintainer email="superjax08@gmail.com">James Jackson</maintainer>

  <author email="superjax08@gmail.com">James Jackson</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
